sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:18: error: not found: value n
        print(i + n)
                  ^